feat: support default plugins (#135)
* feat: support default gradle plugins

* chore: checkstyle violation