@@ -17,7 +17,6 @@
 package com.canonical.devpackspring.rewrite.visitors;
 
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 
 import com.canonical.devpackspring.rewrite.StatementUtil;
@@ -37,6 +36,8 @@ public class GroovyAddPluginVisitor extends GroovyIsoVisitor<ExecutionContext> {
 
 	private final String pluginTemplateGroovy = "plugins {\n\tid '%s' version '%s'\n}\n";
 
+	private final String builtInTemplateGroovy = "plugins {\n\tid '%s'\n}\n";
+
 	private final AddPluginVisitor visitor;
 
 	private final SourceFile templateSource;
@@ -46,10 +47,10 @@ public class GroovyAddPluginVisitor extends GroovyIsoVisitor<ExecutionContext> {
 			.groovyParser(GroovyParser.builder().logCompilationWarningsAndErrors(true));
 		Parser parser = builder.build();
 		InMemoryExecutionContext context = new InMemoryExecutionContext();
+		var pluginDefinition = (pluginVersion != null) ? String.format(pluginTemplateGroovy, pluginName, pluginVersion)
+				: String.format(builtInTemplateGroovy, pluginName);
 		templateSource = parser
-			.parseInputs(
-					Arrays.asList(Parser.Input.fromString(Paths.get("/tmp/build.gradle"),
-							String.format(pluginTemplateGroovy, pluginName, pluginVersion))),
+			.parseInputs(List.of(Parser.Input.fromString(Paths.get("/tmp/build.gradle"), pluginDefinition)),
 					Paths.get("/tmp"), context)
 			.findFirst()
 			.orElseThrow(() -> new IllegalArgumentException("Could not parse as Gradle"));
